Require java 11 only